@@ -1,5 +1,24 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath 'org.openjfx:javafx-plugin:0.0.8'
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'org.openjfx.javafxplugin'
+
+javafx {
+    version = "11"
+    modules = ['javafx.controls', 'javafx.fxml']
+}
 
 repositories {
     jcenter()
@@ -20,11 +39,15 @@ task fatJar(type: Jar) {
 version '1.3.0'
 
 mainClassName = 'de.jensd.fx.glyphs.browser.GlyphsBrowserApp'
-sourceCompatibility = '1.8'
+sourceCompatibility = '11'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 if (!hasProperty('mainClass')) {
     ext.mainClass = 'de.jensd.fx.glyphs.browser.GlyphsBrowserApp'
+}
+
+run {
+    jvmArgs "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED", "--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED"
 }
 
 task execute(type:JavaExec) {
@@ -33,13 +56,13 @@ task execute(type:JavaExec) {
 }
 
 dependencies {
-    compile 'de.jensd:fontawesomefx-emojione:2.2.7-2'
-    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
-    compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
-    compile 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-4'
-    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-5'
-    compile 'de.jensd:fontawesomefx-octicons:4.3.0-5'
-    compile 'de.jensd:fontawesomefx-weathericons:2.0.10-5'
-    compile 'de.jensd:fontawesomefx-controls:8.15'
-    compile 'org.controlsfx:controlsfx:8.40.11'
+    compile 'de.jensd:fontawesomefx-emojione:3.1.1-9'
+    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9'
+    compile 'de.jensd:fontawesomefx-icons525:4.2.0-9'
+    compile 'de.jensd:fontawesomefx-materialdesignfont:2.0.26-9'
+    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-9'
+    compile 'de.jensd:fontawesomefx-octicons:4.3.0-9'
+    compile 'de.jensd:fontawesomefx-weathericons:2.0.10-9'
+    compile 'de.jensd:fontawesomefx-controls:9.0.0'
+    compile 'org.controlsfx:controlsfx:9.0.0'
 }
